--- a/index.css
+++ b/index.css
@@ -85,7 +85,7 @@
 .header h3 {
     color: rgb(108, 241, 108);
     font-family: "coiny";
-    font-size: 30px;
+    font-size: 60px;
 }
 
 section {
@@ -106,8 +106,9 @@ section {
 .progress-bar{
     background-color: rgb(102, 255, 51) ;
 }
-wrap p{
+.wrap p{
     font-family:"Poppins" ;
+    color: white;
 }
 .img3{
     width: 250px;
@@ -146,3 +147,19 @@ textarea{
 .ic2{
     margin: 0px 8px;
 }
+body{
+    background-image: url(images/abstract-1780326_960_720.webp);
+}
+.cnt p{
+    color:white;
+}
+label{
+    color: white;
+}
+
+
+
+
+
+
+
