--- a/index.css
+++ b/index.css
@@ -90,90 +90,115 @@
 
 section {
     height: 100vh;
-    height: 800px;
+    height: 1000px;
 }
-.card-text{
+
+.card-text {
     font-size: 28px;
     font-weight: bold;
     color: rgb(108, 241, 108);
 }
-.outer{
+
+.outer {
     width: 100%;
 
 }
-.wrap{
+
+.wrap {
     width: 100%;
 }
-.progress-bar{
-    background-color: rgb(102, 255, 51) ;
+
+.progress-bar {
+    background-color: rgb(102, 255, 51);
 }
-.wrap p{
-    font-family:"Poppins" ;
-    color:white;
+
+.wrap p {
+    font-family: "Poppins";
+    color: white;
 }
-.img3{
+
+.img3 {
     width: 250px;
     height: 250px;
 }
-textarea{
-    width:100%;
+
+textarea {
+    width: 100%;
 }
-.wraper{
-    padding:50px 60px ;
-    border:solid 1px  rgb(102, 255, 51);
-    border-radius:6px;
+
+.wraper {
+    padding: 50px 60px;
+    border: solid 1px rgb(102, 255, 51);
+    border-radius: 6px;
 
 }
-.wraper h3{
-   margin-bottom: 20px;
-   color: rgb(102, 255, 51);
+
+.wraper h3 {
+    margin-bottom: 20px;
+    color: rgb(102, 255, 51);
 
 }
-.footer{
-    background-color:rgb(102, 255, 102);
+
+.footer {
+    background-color: rgb(102, 255, 102);
     padding: 30px 0px;
-    
+
 }
-.footer p{
-    color:white;
+
+.footer p {
+    color: white;
 }
-.footer div{
+
+.footer div {
     width: max-content;
     margin: auto;
 }
-.ic2{
+
+.ic2 {
     color: white;
     font-size: 26px;
 }
-.ic2{
+
+.ic2 {
     margin: 0px 8px;
 }
-.cnt p{
-    color:white;
+
+.cnt p {
+    color: white;
 }
-label{
+
+label {
     color: white;
 }
 
 
-.bgimg1{background-image: url(images/Laptop.jpeg);
-background-size: cover;
-background-repeat: no-repeat;}
-.bgimg3{background-color: white}
-.bgimg4{background-image: url(images/blackbg3.jpg);
+.bgimg1 {
+    background-image: url(images/Laptop.jpeg);
     background-size: cover;
     background-repeat: no-repeat;
 }
 
-.bgimg5{background-image: url(images/blackbg2.webp);
+.bgimg3 {
+    background-color: white;
+    
+}
+
+.bgimg4 {
+    background-image: url(images/blackbg3.jpg);
     background-size: cover;
-    background-repeat: no-repeat;}
-button{background-color:  rgb(102, 255, 51)}
-button h3{color: white;}
+    background-repeat: no-repeat;
+}
 
+.bgimg5 {
+    background-image: url(images/blackbg2.webp);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
 
+button {
+    background-color: rgb(102, 255, 51)
+}
 
-
-
-
-
+button h3 {
+    color: white;
+}
